[gd_scene format=3 uid="uid://bs2mk1f3p7sgw"]

[ext_resource type="Script" uid="uid://dv1j5s40a7vf6" path="res://Scripts/WeekSummaryScreen.gd" id="1_ba50m"]

[sub_resource type="LabelSettings" id="LabelSettings_5glt0"]
font_size = 72

[node name="WeekSummaryScreen" type="CanvasLayer" unique_id=1593188048]
process_mode = 3
layer = 100
script = ExtResource("1_ba50m")

[node name="Background" type="ColorRect" parent="." unique_id=405724433]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="Panel" type="PanelContainer" parent="." unique_id=886031674]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.5
offset_top = -39.0
offset_right = 95.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=1965750574]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer" unique_id=1589758088]
layout_mode = 2
text = "Relatório da Semana 1"
label_settings = SubResource("LabelSettings_5glt0")

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer" unique_id=114203668]
layout_mode = 2

[node name="StatsLabel" type="RichTextLabel" parent="Panel/VBoxContainer" unique_id=1910730295]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
theme_override_font_sizes/bold_font_size = 48
theme_override_font_sizes/bold_italics_font_size = 48
theme_override_font_sizes/italics_font_size = 48
theme_override_font_sizes/mono_font_size = 48
bbcode_enabled = true
text = " "

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer" unique_id=1370831663]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer" unique_id=331499044]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Iniciar Próxima Semana"
